# steyaertsite

./: .dockerignore  .env.prod.example  .gitignore  Makefile  docker-compose.yaml  movies.csv  pyproject.toml
swccg-site/: Dockerfile  entrypoint.prod.sh  manage.py  pyproject.toml  requirements.txt  scrape_reflections.py
swccg-site/register/: forms.py  urls.py  views.py
swccg-site/register/templates/registration/: activation_email.html  login.html  register.html  register_done.html  set_password.html  set_password_invalid.html
swccg-site/swccg/: asgi.py  urls.py  wsgi.py
swccg-site/swccg/settings/: __init__.py  base.py  dev.py  prod.py
swccg-site/swccgdb/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
swccg-site/swccgdb/management/commands/: clear_cache.py  import_cards.py  import_reflections1.py  (+1 more)
swccg-site/swccgdb/migrations/: 0001_initial.py  0002_remove_ownedcard_copies_ownedcard_copies_bb_and_more.py  0003_set_image.py  0004_alter_card_card_type.py  0005_alter_card_card_type.py  0006_alter_card_card_type.py  0007_remove_card_image.py  0008_alter_set_image.py  0008_card_secondary_card_type.py  0009_alter_card_card_type_alter_card_secondary_card_type.py  0010_alter_card_card_type_alter_card_secondary_card_type.py  0011_alter_card_card_type_alter_card_secondary_card_type.py  0012_deck_deckcard_deck_cards.py  0013_alter_card_card_type_alter_card_secondary_card_type.py  0014_alter_card_card_type_alter_card_secondary_card_type.py
swccg-site/swccgdb/templates/: 400.html  403.html  404.html  500.html  base.html
swccg-site/swccgdb/templatetags/: components.py
(+64 files in other folders)
