[project]
name = "steyeartsite"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.3",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]
prod = [
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
