[project]
name = "steyeartsite"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=5.2.3",
    "openpyxl>=3.1.5",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]
prod = [
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]

[tool.uv.workspace]
members = [
    "swccg-site",
]
